kubernetes/snippets/ingress/traefik/whitelist-traefik-lb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/whitelist-x-forwarded-for: "true"
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/whitelist-source-range: x.x.x.x/16,y.y.y.y
  labels:
    app: traefik
    traffic-type: external
  name: traefik-external
spec:
  rules:
  - host: traefik-external.svc
    http:
      paths:
      - backend:
          serviceName: traefik-external
          servicePort: 80
